NIFI-14412 Streamlined implementation and structure
- Removed nifi-framework-components dependency from nifi-administration
- Moved ActionConverter to nifi-administration module to avoid dependency on nifi-framework-components
- Changed preDestruction to close in FlowActionReporter
- Streamlined changes to EntityStoreAuditService and StandardFlowAction